--- a/calculate-system/build.gradle
+++ b/calculate-system/build.gradle
@@ -16,6 +16,7 @@ test{
 }
 
 dependencies {
+    testCompile 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
